AHO: IE comments overflow fix

--- a/src/aho-requests-app/styles/components/request.less
+++ b/src/aho-requests-app/styles/components/request.less
@@ -262,6 +262,7 @@
 
   .request-comments {
     .comment {
+      max-width: 65%;
       //display: inline-flex !important;
       align-self: flex-start;
       //width: auto;
